# greek_app

./: .gitignore  AGENTS.md  Cambridge Grammar of Classical Greek (Evert van Emde Boas, Albert Rijksbaron etc.).docx  Cargo.toml  DB_FIX_HANDOFF.md  Dioxus.toml  MORPHOLOGY_VALIDATION.md  PARADIGM_AUDIT.md  README.md  build.rs  sfodra_dev_plan.md  tmp_view
.claude/: settings.json
.github/workflows/: deploy.yml
assets/: greek_paradigms.db  greek_paradigms.db.bak2  main.css  manifest.json  pwa-install.js  sw.js  swipe.js  tailwind.css
assets/styles/: themes.css
src/: i18n.rs  main.rs  router.rs
src/components/: fillin.rs  flashcard.rs  mod.rs  paradigm_view.rs  shell.rs  sidebar.rs
src/db/: mod.rs
src/logic/: diacritics.rs  mod.rs  paradigm.rs  sm2.rs
src/models/: filter.rs  form.rs  mod.rs  progress.rs  session.rs  tags.rs
src/pages/: home.rs  mod.rs  my_learning.rs  paradigm_builder.rs  progress.rs  settings.rs  study_build.rs  study_fillin.rs  study_flashcard.rs  study_flashcard_rev.rs  study_paradigm.rs
src/state/: app_state.rs  mod.rs  settings.rs
