[package]
name = "morph-app"
version = "0.1.0"
authors = ["unknowndavid"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
dirs = "6"
web-sys = { version = "0.3", features = ["Window", "Storage", "Navigator"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[build-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
opt-level = "s"
lto = true
